--- a/Exemplos no R/Exemplo2_modelo_log_lin.ipynb
+++ b/Exemplos no R/Exemplo2_modelo_log_lin.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/pedroallmeiida/econometria/blob/main/Exemplos%20no%20R/Exemplo2_modelo_log_lin.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "i4ZS_CUhiK5v"
       },
       "source": [
@@ -22,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "txztwgzUiK5x"
       },
@@ -44,14 +54,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 2,
       "metadata": {
-        "id": "i09K04kgiK5z",
-        "outputId": "96c62dd3-6c8f-4b52-c258-6cd858754c04",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 568
-        }
+        },
+        "id": "i09K04kgiK5z",
+        "outputId": "77dde276-7fff-427f-f7a8-8b4521744352"
       },
       "outputs": [
         {
@@ -124,14 +134,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 3,
       "metadata": {
-        "id": "nbqTnooviK50",
-        "outputId": "83454c30-1bae-45e4-c824-027be0c884f4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 329
-        }
+        },
+        "id": "nbqTnooviK50",
+        "outputId": "1837aa4a-4bfe-4e89-c2a6-590e5623d864"
       },
       "outputs": [
         {
@@ -187,17 +197,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "ROKz7z26iK51"
-      },
-      "outputs": [],
-      "source": [
-        "#tbl_regression(lm_loglog, intercept = T)"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "JefwWQpoiK51"
@@ -208,14 +207,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {
-        "id": "uEPFiXZwiK51",
-        "outputId": "40afa2f5-d05d-430a-f7d8-b818e306dac4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 329
-        }
+        },
+        "id": "uEPFiXZwiK51",
+        "outputId": "6efb0405-20a9-47b1-826c-5ffaa45f8420"
       },
       "outputs": [
         {
@@ -270,10 +269,82 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###  Modelo Log-Lin para medir a taxa de crescimento das despesas não duráveis"
+      ],
+      "metadata": {
+        "id": "77BCY120dp4a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lm_loglin <- lm( log(DESPNAODUR)~  tempo, data = df)\n",
+        "summary(lm_loglin)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 329
+        },
+        "id": "r44jKgNcjotx",
+        "outputId": "db0ae639-171f-44ba-d0ad-b657f79f97db"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\n",
+              "Call:\n",
+              "lm(formula = log(DESPNAODUR) ~ tempo, data = df)\n",
+              "\n",
+              "Residuals:\n",
+              "      Min        1Q    Median        3Q       Max \n",
+              "-0.006176 -0.002526  0.001014  0.001696  0.006060 \n",
+              "\n",
+              "Coefficients:\n",
+              "             Estimate Std. Error t value Pr(>|t|)    \n",
+              "(Intercept) 7.6256892  0.0020649 3692.92  < 2e-16 ***\n",
+              "tempo       0.0097964  0.0002271   43.13 2.02e-15 ***\n",
+              "---\n",
+              "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
+              "\n",
+              "Residual standard error: 0.0038 on 13 degrees of freedom\n",
+              "Multiple R-squared:  0.9931,\tAdjusted R-squared:  0.9925 \n",
+              "F-statistic:  1861 on 1 and 13 DF,  p-value: 2.024e-15\n"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Intrepretação do modelo log-lin:**\n",
+        "\n",
+        "A Equação do modelo predito é dada por:\n",
+        "\n",
+        "$$\n",
+        "\\widehat{\\ln DESPNAODUR}_t = 7.63 + 0.0098 \\, tempo\n",
+        "$$\n",
+        "\n",
+        "em que as estimativas para o intercepto e coeficiente de regressão são dados respectivamente por, $\\hat\\beta_0 = 7.63$ e $\\hat\\beta_1 = 0.0098$.\n",
+        "\n",
+        "Interpretação: Em um período que vai do 1º trimestre de 2023 ao 3º trimestre de 2006, implica que as despesas com bens duráveis aumentaram a uma taxa trimestral de 0.98%"
+      ],
+      "metadata": {
+        "id": "8xmVcUdFd2oj"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "r44jKgNcjotx"
+        "id": "efjuFC2zeMYp"
       },
       "execution_count": null,
       "outputs": []
@@ -284,7 +355,8 @@
       "name": "R"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "ir",
