--- a/Exemplos no R/Exemplo1_modelo_loglog.ipynb
+++ b/Exemplos no R/Exemplo1_modelo_loglog.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/pedroallmeiida/econometria/blob/main/Exemplos%20no%20R/Exemplo1_modelo_loglog.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "0hSfRVXKanCE"
       },
       "source": [
@@ -31,12 +41,12 @@
       "metadata": {
         "id": "Q09OW0mBa1CF"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "mH7l40L7anCH"
       },
@@ -59,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "ngKbZyQ-anCJ",
         "outputId": "c3ccb9fe-6bc3-4a8d-ffe7-24a6766d3055",
@@ -138,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "BeHiluQmanCK",
         "outputId": "d12f9e4d-d53d-42a9-b466-5903dd836d8f",
@@ -193,7 +203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "8eXyUb8-anCK",
         "outputId": "daecd53f-86f8-49c7-b97c-9c26586bbf8c",
@@ -258,7 +268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "M2fGTl7_anCL"
       },
@@ -278,7 +288,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "R3YMp9XxanCL",
         "outputId": "c81da01e-b9c0-4c57-b9b1-43e639557179",
@@ -347,7 +357,8 @@
       "name": "R"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "ir",
